# OnBoard-Live

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
active-stream-proxy/: Dockerfile  main.py
backend/: Dockerfile  main.py  requirements.txt  schema.prisma
backend/migrations/20240815175119_pls_work/: migration.sql
backend/migrations/20240816163601_add_pr_model/: migration.sql
backend/migrations/20240816164220_make_pr_model_optional/: migration.sql
backend/migrations/20240816164920_add_pr_number_field/: migration.sql
backend/migrations/20240817173150_add_sec_token/: migration.sql
backend/migrations/20240817193412_refactor_pull_user_relation/: migration.sql
backend/migrations/20240823141852_add_gh_token_field/: migration.sql
backend/migrations/20240823145449_more_pr_schema_work/: migration.sql
backend/migrations/20240823151408_remove_duplicated_field/: migration.sql
backend/migrations/20240831155249_relate_session_model_to_pr_not_user/: migration.sql
backend/migrations/20240831222739_remove_unique_constraint/: migration.sql
backend/migrations/20240831222937_add_different_unique_constraint/: migration.sql
caddy/: Caddyfile
live-stream/: Dockerfile  run.sh  user_run.sh
mediamtx/: Dockerfile  mediamtx.yml
obs/: Dockerfile  setup-obs.py  setup_obs.py  start.sh
onboard-live-backend/: main.py  schema.prisma
onboard_live_backend/: main.py  schema.prisma
onboard_live_backend/migrations/20240719191810_init/: migration.sql
onboard_live_backend/migrations/20240821135629_prep_for_oauth/: migration.sql
onboard_live_backend/migrations/20240823141450_refactor_schema_for_oauth/: migration.sql
onboard_live_backend/migrations/20240823151722_make_gh_user_id_required/: migration.sql
onboard_live_backend/migrations/20240823152458_make_gh_user_id_an_int/: migration.sql
onboard_live_backend/migrations/20240831153915_add_session_model/: migration.sql
review/: README.md
stream/: README.md
stream/backend/: main.py
stream/keygen/: main.py
stream/tiling-frontend/: bun.lockb  package.json  tsconfig.json  vite.config.ts
stream/tiling-frontend/src/: App.svelte  app.css
tiling-frontend/: Dockerfile  bun.lockb  package.json  tailwind.config.js
tiling-frontend/src/: App.svelte  main.ts
