[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.0.1"
authors = [{ name = "Micha Albert", email = "micha@2231puppy.tech" }]
description = "Backend for OnBoard Live, A Hack Club YSWS grant program"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "APScheduler==3.10.4",
    "attrs==23.2.0",
    "black==24.4.2",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cryptography==43.0.0",
    "defusedxml==0.8.0rc2",
    "dnspython==2.6.1",
    "ecdsa==0.19.0",
    "email_validator==2.2.0",
    "fastapi==0.112.0",
    "fastapi-cli==0.0.4",
    "fastapi-oauth2==1.0.0",
    "fastapi-utils==0.7.0",
    "frozenlist==1.4.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "Jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "mypy==1.11.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "oauthlib==3.2.2",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "prisma==0.14.0",
    "psutil==5.9.8",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "Pygments==2.18.0",
    "PyJWT==2.9.0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "python3-openid==3.2.0",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.7.1",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.16.0",
    "slack_bolt==1.20.0",
    "slack_sdk==3.31.0",
    "sniffio==1.3.1",
    "social-auth-core==4.5.4",
    "starlette==0.37.2",
    "tomlkit==0.13.0",
    "typer==0.12.3",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "tzlocal==5.2",
    "urllib3==2.2.2",
    "uvicorn[standard]==0.30.6",
    "uvloop==0.19.0",
    "watchfiles==0.22.0",
    "websockets==12.0",
    "yarl==1.9.4",
]

[project.urls]
Homepage = "https://github.com/MichaByte/OnBoard-Live"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.scripts]
start = "main:main"
